Revision history for Sys-Virt-IO-Async

0.0.3    to be released
         * Fix POD error
         * Always pass HANDLE_ERROR and HANDLE_HANGUP events,
           even when the caller didn't ask for them

0.0.2    2023-06-03
         * Fix dist not being indexed
         * Add $VERSION variable to modules

0.0.1    2023-06-03
         * Initial release